fix: Remove overflow: hidden to keep tabs visible when collapsed

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -88,7 +88,7 @@
     padding-left: 0;
     padding-right: 0;
     border-right-width: 0;
-    overflow: hidden; /* Hide content when collapsed */
+    /* overflow: hidden; */ /* REMOVED: This hides the tab when collapsed */
 }
 /* --- End NEW Styles --- */
 /* Right Sidebar (Plugins) */
@@ -113,7 +113,7 @@
     padding-left: 0;
     padding-right: 0;
     border-left-width: 0;
-    overflow: hidden; /* Hide content when collapsed */
+    /* overflow: hidden; */ /* REMOVED: This hides the tab when collapsed */
 }
 /* --- End NEW Styles --- */
 
